Prueba2/grammar.txt
Grammar
=======

input -> stmt_list ;

stmt_list -> stmt_list ; stmt
stmt_list -> stmt

stmt_list -> stmt p_stmt_list
p_stmt_list -> stmt_list
p_stmt_list -> ''

stmt -> IDENT = expr
stmt -> PRINT expr

expr -> expr + term
expr -> term

term -> term * factor
term -> factor

factor -> IDENT
factor -> NUMBER
factor -> ( expr )

WHILE ( IDENT = IDENT ) { IDENT = IDENT ; WHILE ( IDENT = IDENT ) { IDENT = IDENT ; } }
